--- a/css/theme.css
+++ b/css/theme.css
@@ -35,7 +35,7 @@ body {
 	cursor: inherit;
 	display: block;
 }
-#csdEditor {
+#CSDEditor {
 	height: 400px;
 	border:solid 1px black;
 }
@@ -45,7 +45,7 @@ body {
 	height:400px;
 	position:relative;
 }
-#orcEditor {
+#ORCEditor {
 	border:solid 1px black;
 	background:transparent;
 	position: absolute;
@@ -68,7 +68,7 @@ body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#scoEditor {
+#SCOEditor {
 	border:solid 1px black;
 	border-top:none;
 	position: absolute;
@@ -97,13 +97,26 @@ body {
 }
 
 
-#console {
+#ConsoleOutput {
 	height: 130px;
 }
 
 #helpText {
 
 	height:130px;
+}
+
+h4#HelpText {
+	
+	font-size:15px;
+	font-style:italic;
+	font-weight:bold;
+	margin-top:0px;
+	margin-bottom:6px;
+}
+p#HelpText {
+	
+	font-size:12px;
 }
 
 svg { height: 100%; width: 100%;  }
